# SolaceDeployer

./: .gitignore  README.md  SampleDomain.json  SolaceSampleDomain.json  pyproject.toml
config/: dev-sample.json  eventPortal-sample.json  tst-sample.json
deployer/: __main__.py  broker.py  config_push.py  deploy.py  enums.py  errors.py  event_portal.py  semp.py  utils.py
